# elden-ring-build-agent

./: .gitignore  README.md  pyproject.toml
code/: __init__.py  graph.py  main.py  models.py  nodes.py  prepare_rag_data.py  vectorstore.py
data/rag_data/ammos/: arrow.md  ballista_bolt.md  black-key_bolt.md  bloodbone_arrow.md  bloodbone_arrow_fletched.md  bloodbone_bolt.md  bolt.md  bone_arrow.md  bone_arrow_fletched.md  bone_ballista_bolt.md  bone_bolt.md  burred_bolt.md  dwelling_arrow.md  explosive_bolt.md  explosive_greatbolt.md  fire_arrow.md  firebone_arrow.md  firebone_arrow_fletched.md  firebone_bolt.md  flaming_bolt.md  golden_arrow.md  golden_bolt.md  golden_great_arrow.md  golem's_great_arrow.md  great_arrow.md  haligbone_arrow.md  haligbone_arrow_fletched.md  haligbone_bolt.md  lightning_greabolt.md  lightningbone_arrow.md  lightningbone_arrow_fletched.md  lightningbone_bolt.md  lordsworn's_bolt.md  magicbone_arrow.md  magicbone_arrow_fletched.md  magicbone_bolt.md  meteor_bolt.md  perfumer's_bolt.md  poisonbone_arrow.md  poisonbone_arrow_fletched.md  (+12 more)
data/rag_data/armors/: alberich's_bracers.md  alberich's_pointed_hat.md  alberich's_pointed_hat_(altered).md  alberich's_robe.md  alberich's_robe_(altered).md  alberich's_trousers.md  all-knowing_armor.md  all-knowing_armor_(altered).md  all-knowing_gauntlets.md  all-knowing_greaves.md  all-knowing_helm.md  aristocrat_boots.md  aristocrat_coat.md  aristocrat_garb.md  aristocrat_garb_(altered).md  aristocrat_hat.md  aristocrat_headband.md  ash-of-war_scarab.md  astrologer_gloves.md  (+547 more)
notebooks/: testing.ipynb
(+795 files in other folders)
