[project]
name = "elden-ring"
version = "0.1.0"
description = ""
authors = [
    {name = "Gustavo Roque",email = "gustavoroq85@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "langchain (>=1.2.13,<2.0.0)",
    "langchain-openai (>=1.1.12,<2.0.0)",
    "langgraph (>=1.1.3,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "chromadb (>=1.5.5,<2.0.0)",
    "faiss-cpu (>=1.13.2,<2.0.0)",
    "langchain-core (>=1.2.22,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
